[gd_scene load_steps=3 format=3 uid="uid://cj6yiyhuj3xd8"]

[ext_resource type="Script" path="res://Scenes/Levels/Environment/Extender.gd" id="1_4kim1"]
[ext_resource type="PackedScene" uid="uid://680pc2n2ovwt" path="res://Scenes/expanding_platform.tscn" id="2_q2s38"]

[node name="Extender" type="Node2D"]
script = ExtResource("1_4kim1")
metadata/Size = 1

[node name="ExpandingPlatform" parent="." instance=ExtResource("2_q2s38")]

[connection signal="animation_complete" from="ExpandingPlatform" to="." method="_on_expanding_platform_animation_complete"]
